2011-07-15 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_gis.php: Fixed Gis map creation when has agents
	in a layer.
	
	Fixes: #3293392
	
	* include/functions_networkmap.php: Fixes networkmap when agent
	name has blank spaces.
	
	Merged from trunk.

2011-07-14 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_ui.php: Changed length on module name and 
	template column in function ui_format_alert_row().
	
	Merged from trunk.	

2011-07-13 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* godmode/agentes/modificar_agente.php: Fixed an error on my last 
	commit.

2011-07-13 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_html.php: Fixed function print_select_groups()
	to retrieve subgroups with parent distinct than "group All".

	Fixes: #3365845

	godmode/agentes/modificar_agente.php: Fixed call to 
	print_select_groups() to check user ACLs.

2011-07-13 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* godmode/agentes/modificar_agente.php: Added max-width to group 
	select in this view.
	* include/pchart_graph.php: Added more colors to combined
	graphs.
	
	Fixes: #3301605

2011-07-11  Ramon Novoa  <rnovoa@artica.es>

	* include/functions_reporting.php,
	  operation/reporting/reporting_xml.php: Fixed custom SQL reports.
	  safe_output was not properly called before executing que query.


2011-06-29  Ramon Novoa  <rnovoa@artica.es>

	* include/functions_events.php,
	  operation/events/events_list.php,
	  operation/events/events.php: Merged from trunk. Improved event
	  behaviour.

2011-06-17  Ramon Novoa  <rnovoa@artica.es>

	* godmode/alerts/alert_actions.php: Merged from trunk. Aesthetic fix.

2011-06-17  Sergio Martin <sergio.martin@artica.es>

	* include/functions_events.php: Fixed duplicated comments in
	event validation

2011-06-15 Javier Lanz <javier.lanz@artica.es>

	* include/functions_db.php: Deleted forgotten debugPrint calls