@@ -1,3 +1,15 @@
+2011-07-18  Sergio Martin <sergio.martin@artica.es>
+
+	* godmode/massive/massive_operations.php: Fixed acl last fix 
+	warnings
+
+2011-07-18  Sergio Martin <sergio.martin@artica.es>
+
+	* godmode/massive/massive_operations.php
+	godmode/massive/massive_delete_profiles.php
+	godmode/massive/massive_add_profiles.php: Restringed profiles massive
+	operations only to admins for bug: 3294464
+
 2011-07-15 Juan Manuel Ramon <juanmanuel.ramon@artica.es>
 
 	* include/functions_gis.php: Fixed Gis map creation when has agents
